--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3330,8 +3330,8 @@ body.layout-3 .main-footer {
   display: inline-block;
   width: 100%;
   text-align: center;
-  height: 60px;
-  line-height: 60px;
+  /* height: 60px;
+  line-height: 60px; */
 }
 .main-sidebar .sidebar-brand.sidebar-brand-sm {
   display: none;
