--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -15,6 +15,10 @@ section {
     padding-top: 150px;
 }
 
+.section-padding-top#about-page {
+    padding-top: 15px;
+}
+
 .section-padding-bottom {
     padding-bottom: 120px;
 }
@@ -294,8 +298,15 @@ Button-Styles
 /* -----------------------
 03. Header-Area
 ------------------------- */
+header {    
+    transform: scale(0.9);
+    transform-origin: left top;
+    height: calc(100% / 0.9);
+    width: calc(100% / 0.9);
+}
+
 .header-area {
-    padding-top: 320px;
+    padding-top: 300px;
     padding-bottom: 210px;
     background: url('../images/home-slider-2.jpg') no-repeat scroll top center/cover;
     position: relative;
