--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3585,3 +3585,43 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
   animation-iteration-count: infinite;
   opacity: 1;
 }
+
+
+li {
+  list-style: none;
+}
+
+.image-preview-t img {
+  width: 200px;
+  height: 200px;
+}
+
+.image-preview-t {
+  height: 220px;
+  width: 670px;
+  overflow-x: auto;
+  /* background-color: aquamarine; */
+  display: flex;
+  gap: 20px;
+}
+
+.real-upload,
+.preview-box {
+  display: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #c4c4c4;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #eee;
+}
