--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1135,8 +1135,8 @@ select.form-control:not([size]):not([multiple]) {
 }
 .table:not(.table-sm) thead th {
   border-bottom: none;
-  background-color: rgba(0, 0, 0, 0.1);
-  color: #666;
+  background-color: #929fff;
+  color: #fff;
   padding-top: 15px;
   padding-bottom: 15px;
 }
