--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2466,7 +2466,7 @@ a.bb {
 
 .login-brand {
   margin: 20px 0;
-  margin-bottom: 40px;
+  margin-bottom: 55px;
   font-size: 24px;
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -3331,8 +3331,7 @@ body.layout-3 .main-footer {
   display: inline-block;
   width: 100%;
   text-align: center;
-  /* height: 60px;
-  line-height: 60px; */
+  margin-top: 1rem;
 }
 .main-sidebar .sidebar-brand.sidebar-brand-sm {
   display: none;
