--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -1486,13 +1486,14 @@ Footer-Area
 }
 
 .navbar-brand {
-    max-width: 200px;
+    max-width: 220px;
     padding: 0;
     margin: 0;
 }
 
 .navbar-brand>img {
-    margin-top: -0.5em;
+    margin-top: -0.25rem;
+    margin-left: -1rem;
 }
 
 .footer-widgets .footer-logo {
