--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -10,6 +10,9 @@ section {
     padding-top: 150px;
     padding-bottom: 150px;
 }
+.videoHeader+.section-padding {
+    padding-top: 10rem;
+}
 
 .section-padding-top {
     padding-top: 150px;
@@ -447,13 +450,14 @@ header {
 ---------------------- */
 .filter-menu {
     list-style: none;
-    margin: -15px 0 30px 0;
+    margin: -15px 0 40px 0;
     padding: 0;
     text-align: center;
     width: 100%;
 }
 
 .filter-menu li {
+    margin: 0 0.15rem;
     display: inline-block;
     font-size: 15px;
     color: #6777ef;
@@ -1074,7 +1078,7 @@ Footer-Area
 .footer-area {
     padding-top: 90px;
     /* padding-bottom: 30px; */
-    background-color: #190844;
+    background-color: #000;
 }
 
 .footer-widgets {
@@ -1097,7 +1101,7 @@ Footer-Area
 }
 
 .footer-bottom {
-    background-color: #190844;
+    background-color: #000;
     /* margin-left: 5px; */
     /* margin-right: 5px; */
     padding: 25px 15px;
@@ -1213,20 +1217,72 @@ Footer-Area
 -------------------------- */
 .site-header {
     background-image: url('../images/site-header.jpg');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: scroll;
-    background-position: center center;
+    background-position: 50% 41%;
     background-size: cover;
     position: relative;
     z-index: 1;
-    padding-top: 220px;
-    padding-bottom: 120px;
+    padding-top: 22rem;
+    padding-bottom: 2rem;
     overflow: hidden;
 }
 
+
+.videoHeader {
+    position: relative;
+    width: 100%;
+    height: 35rem;
+    overflow: hidden;
+    margin-bottom: -5rem;
+}
+
+.videoHeader>video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.videoHeader>.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.videoHeader>.text {
+    position: absolute;
+    top: 82%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    /* text-align: center; */
+}
+.videoHeader>.text>h1 {
+    color: white;
+    font-size: 3rem;
+    font-weight: 600;
+    letter-spacing: 0.3rem;
+}
+.videoHeader>.text>p {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+    /* letter-spacing: 0.3rem; */
+}
+
+
+
+
+
+
+
+
 .site-header .title {
     color: #ffffff;
-    font-size: 76px;
+    font-size: 50px;
+    font-weight: 500;
 }
 
 .site-header .breadcrumbs ul {
@@ -1537,3 +1593,20 @@ Footer-Area
 .footer-widgets .text-box ul li a:hover {
     background: #ff895e
 }
+
+
+::-webkit-scrollbar {
+    width: 15px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #c4c4c4;
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #eee;
+  }
