--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -457,10 +457,6 @@ header {
     width: 100%;
 }
 
-.filter-left {
- text-align: left;
-}
-
 .filter-menu li {
     margin: 0 0.15rem;
     display: inline-block;
@@ -1318,11 +1314,8 @@ Footer-Area
     color: #2f2f2f;
     content: "/";
 }
-
+/* 
 @media (max-width: 992px) {
-    .breadcrumbs {
-        margin-top: 68px;
-    }
 
     .breadcrumbs .d-flex {
         display: block !important;
@@ -1335,7 +1328,7 @@ Footer-Area
     .breadcrumbs ol li {
         display: inline-block;
     }
-}
+} */
 
 
 
