--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -303,10 +303,10 @@ Button-Styles
 03. Header-Area
 ------------------------- */
 header {
-    transform: scale(0.9);
+    transform: scale(0.8);
     transform-origin: left top;
-    height: calc(100% / 0.9);
-    width: calc(100% / 0.9);
+    height: calc(100% / 0.8);
+    width: calc(100% / 0.8);
 }
 
 .header-area {
@@ -319,6 +319,7 @@ header {
     min-height: calc(100vh - 40px);
     display: flex;
     align-items: center;
+    margin-bottom: -15rem;
 }
 
 #particles-js {
@@ -365,7 +366,8 @@ header {
 .header-text .typer-title {
     color: #fdfdfd;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 32px;
+    letter-spacing: 0.1rem;
 }
 
 .header-text .title {
@@ -1577,8 +1579,14 @@ Footer-Area
 }
 
 .navbar-brand>img {
-    margin-top: -0.25rem;
-    margin-left: -1rem;
+    margin-top: -0.5rem;
+    margin-left: 1.5rem;
+}
+
+@media (min-width: 1400px) {
+    .header-area>.container {
+        max-width: 1500px;
+    }
 }
 
 .footer-widgets .footer-logo {
