--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -483,9 +483,21 @@ header {
     color: #fff;
 }
 
-.filter-menu.filter-left li:hover,
-.filter-menu.filter-left li.active {
-    background: #6777efba;
+.filter-menu.filter-portPage li:hover,
+.filter-menu.filter-portPage li.active {
+    background: transparent;
+    color: #6777ef;
+}
+
+.filter-menu.filter-portPage li {
+    color: #282828;
+    border: none;
+    /* padding: 10px 15px; */
+    padding: 0px;
+}
+
+.filter-menu.filter-portPage span {
+    font-weight: 600;
 }
 
 .portfolio-wrapper {
@@ -1256,7 +1268,7 @@ Footer-Area
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.82);
 }
 
 .videoHeader>.text {
@@ -1369,18 +1381,51 @@ Footer-Area
     margin-bottom: 7rem;
 }
 
+.portfolio-slider .slick-dots li button {
+    background-color: #212592;
+}
+
+.portfolio-details img {
+    transition: 1s ease;
+    transform-origin: top center;
+    border-radius: 5px;
+}
+
+.portfolio-details img:hover {
+    transform: scale(1.05);
+}
+
+
+.portfolio-details .pcard-header {
+    padding: 10px 20px;
+}
+
+.portfolio-details i {
+    color: rgba(0, 0, 0, 0.75);
+    padding-right: 10px;
+}
+
+.pcard {
+    border: 1px solid #DDDDDD;
+    box-shadow: 0px 0px 10px rgba(10, 10, 10, 0.05);
+}
+
+
+
 .portfolio-details .portfolio-info {
     padding: 30px;
-    box-shadow: 0px 0 30px rgba(21, 21, 21, 0.08);
+    padding-bottom: 15px;
+    box-shadow: 0px 12px 12px rgba(10, 10, 10, 0.1);
     margin-top: -10px;
     margin: -7px 0 0 7px;
+    border: 1px solid #8e8e8e30;
 }
 
 .portfolio-details .portfolio-info h3 {
     font-size: 22px;
     font-weight: 700;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
+    margin-bottom: 15px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
 
@@ -1394,8 +1439,14 @@ Footer-Area
     margin-top: 10px;
 }
 
+.portfolio-details .portfolio-info .btn {
+    font-size: 14px;
+    margin: 0 0.25rem;
+    padding: 4px 7px;
+}
+
 .portfolio-details .portfolio-description {
-    margin: 30px 0 0 16px;
+    margin: 50px 0 0 16px;
 }
 
 .portfolio-details .portfolio-description h2 {
