--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -1260,6 +1260,7 @@ Footer-Area
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center 38%;
 }
 
 .videoHeader>.overlay {
