--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -1256,11 +1256,26 @@ Footer-Area
     overflow: hidden;
 }
 
+.imageHeader {
+    position: relative;
+    width: 100%;
+    height: 25rem;
+    overflow: hidden;
+}
+
 .videoHeader>video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center 38%;
+}
+
+.imageHeader>img.scaleImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center 62%;
+    transition: transform 0.2s linear;
 }
 
 .videoHeader>.overlay {
@@ -1270,6 +1285,15 @@ Footer-Area
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.82);
+}
+
+.imageHeader>.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .videoHeader>.text {
@@ -1282,7 +1306,18 @@ Footer-Area
     text-align: center;
 }
 
-.videoHeader>.text>h1 {
+.imageHeader>.text {
+    position: absolute;
+    /* top: 82%;
+    left: 30%; */
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.videoHeader>.text>h1,
+.imageHeader>.text>h1 {
     color: white;
     font-size: 2.5rem;
     font-weight: 600;
@@ -1290,7 +1325,8 @@ Footer-Area
     margin-bottom: -0.1rem;
 }
 
-.videoHeader>.text>p {
+.videoHeader>.text>p,
+.imageHeader>.text>p {
     color: white;
     font-size: 1rem;
     font-weight: 400;
@@ -1397,11 +1433,11 @@ Footer-Area
 }
 
 
-.portfolio-details .pcard-header {
+.pcard-header {
     padding: 10px 20px;
 }
 
-.portfolio-details i {
+.pcard-header i {
     color: rgba(0, 0, 0, 0.75);
     padding-right: 10px;
 }
