--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -1055,7 +1055,8 @@ blockquote {
 }
 
 .pagination .page-numbers {
-    background: #558bff;
+    border-radius: 5px;
+    background: #6777ef;
     display: inline-block;
     width: 50px;
     height: 50px;
@@ -1275,7 +1276,7 @@ Footer-Area
     height: 100%;
     object-fit: cover;
     object-position: center 62%;
-    transition: transform 0.2s linear;
+    transition: transform 0.1s linear;
 }
 
 .videoHeader>.overlay {
@@ -1442,12 +1443,66 @@ Footer-Area
     padding-right: 10px;
 }
 
+.blog-slider .pcard {
+    margin: 10px 15px 30px;
+    background-color: #f3f7ff;
+}
+
 .pcard {
     border: 1px solid #DDDDDD;
-    box-shadow: 0px 0px 10px rgba(10, 10, 10, 0.05);
+    box-shadow: 0px 0px 20px rgba(10, 10, 10, 0.1);
+    font-size: 13px;
+    margin-bottom: 40px;
+}
+
+.pcard a {
+    color: #282828;
+}
+
+.pcard-image {
+    height: 220px;
+    overflow: hidden;
+
+}
+
+.pcard-image>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center 70%;
+
+    transition: 1s ease;
+    border-radius: 3px;
 }
 
 
+.pcard>a:hover img {
+    transform: scale(1.025);
+}
+
+.pcard>a:hover h6 {
+    color: #6777ef;
+}
+
+.pcard-content {
+    padding: 30px;
+    height: 200px;
+}
+
+.pcard-text {
+    height: 120px;
+    overflow: hidden;
+}
+
+.pcard h6 {
+    font-size: 22px;
+    line-height: 27px;
+    transition: 0.3s ease;
+}
+
+.pcard p {
+    font-size: 15px;
+}
 
 .portfolio-details .portfolio-info {
     padding: 30px;
