--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -1,6 +1,6 @@
 body {
     overflow-x: hidden;
-    font-family: "游ゴシック体", Poppins, YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+    font-family: "游ゴシック体", 'Poppins', YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 }
 
 section {
