--- a/public/frontend/assets/css/normalize.css
+++ b/public/frontend/assets/css/normalize.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    font-family: "游ゴシック体", Poppins, YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+    font-family: "游ゴシック体", 'Poppins', YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
     /* 1 */
     -ms-text-size-adjust: 100%;
     /* 2 */
