--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -585,6 +585,10 @@ blockquote {
     color: #ffffff;
 }
 
+.portfolio-content a {
+    color: #fff;
+}
+
 .single-portfolio .portfolio-content .desc {
     font-size: 16px;
     color: #fffefe;
@@ -1528,6 +1532,7 @@ Footer-Area
     margin-bottom: 15px;
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
+    line-height: 1.6;
 }
 
 .quote-area {
