--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -1568,6 +1568,14 @@ Footer-Area
     margin-top: 10px;
 }
 
+.quote-area li {
+    font-size: 16px;
+}
+
+.quote-area ul li+li {
+    margin-top: 6px;
+}
+
 .portfolio-details .portfolio-info .btn,
 .quote-area .btn {
     font-size: 14px;
