--- a/public/frontend/assets/css/normalize.css
+++ b/public/frontend/assets/css/normalize.css
@@ -3,6 +3,8 @@
     outline: none;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
 html {
     font-family: "游ゴシック体", 'Poppins', YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
     /* 1 */
