--- a/public/frontend/assets/css/normalize.css
+++ b/public/frontend/assets/css/normalize.css
@@ -54,7 +54,7 @@ h6 {
     font-weight: 800;
     margin: 0 0 15px;
     line-height: 1.2em;
-    color: #190844;
+    color: #332b49;
 }
 
 /* Remove Chrome Input Field's Unwanted Yellow Background Color */
