--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -14,6 +14,10 @@ section {
     padding-bottom: 150px;
 }
 
+.blog-section-padding {
+    padding-top: 70px;
+}
+
 .videoHeader+.section-padding {
     padding-top: 10rem;
 }
@@ -897,7 +901,7 @@ blockquote {
 
 .card-body label {
     text-align: right;
-    padding: 0 0 8px;
+    padding: 10px;
     font-size: 12px;
     font-weight: 600;
 }
@@ -1879,7 +1883,7 @@ Footer-Area
 .footer-contact>.overlay {
     position: absolute;
     width: 100%;
-    height: 90%;
+    height: 80%;
     z-index: -1;
 }
 
