--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -64,7 +64,7 @@
 }
 
 a {
-  color: #6777ef !important;
+  color: #6777ef;
   font-weight: 500;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
@@ -3393,7 +3393,7 @@ body.layout-3 .main-footer {
   padding: 0 20px;
   width: 100%;
   letter-spacing: 0.3px;
-  color: #78828a;
+  color: #282828;
   text-decoration: none;
 }
 .main-sidebar .sidebar-menu li a .badge {
