--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -376,21 +376,24 @@ header {
 
 .header-text .typer-title {
     color: #fdfdfd;
-    font-weight: 600;
-    font-size: 32px;
-    letter-spacing: 0.1rem;
+    font-weight: 400;
+    font-size: 28px;
+    margin-bottom: 26px;    
+    letter-spacing: -1px;    
 }
 
 .header-text .title {
     font-size: 76px;
     color: #ffffff;
+    letter-spacing: 10px;
 }
 
 .header-text .desc {
-    font-size: 24px;
-    line-height: 38px;
+    font-size: 22px;
+    letter-spacing: -1px;
+    font-weight: 500;
     color: #ffffff;
-    margin-bottom: 50px;
+    margin: 20px 0 80px 5px;
 }
 
 .play-buttons {
@@ -1748,6 +1751,10 @@ Footer-Area
     padding: 25px;
     background: #f3f7ff;
     border-radius: 10px;
+}
+
+.single-service p {
+    line-height: 2;
 }
 
 .header-text a.button-dark.mouse-dir {
