--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -323,7 +323,7 @@ header {
 .header-area {
     padding-top: 300px;
     padding-bottom: 210px;
-    background: url('../images/home-slider-2.jpg') no-repeat scroll top center/cover;
+    /* background: url('../images/home-slider-2.jpg') no-repeat scroll top center/cover; */
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -370,7 +370,7 @@ header {
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: 0.6;
+    opacity: 0.55;
     z-index: -1;
 }
 
@@ -434,6 +434,10 @@ header {
     top: 50%;
     left: 0;
     transform: translateY(-50%);
+}
+
+.single-service .desc {
+    padding: 0 10px;
 }
 
 /* --------------------
@@ -1890,7 +1894,7 @@ Footer-Area
 .footer-contact>.overlay {
     position: absolute;
     width: 100%;
-    height: 80%;
+    height: 75%;
     z-index: -1;
 }
 
