--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -333,6 +333,32 @@ header {
     margin-bottom: -15rem;
 }
 
+.headerImage {
+    position: fixed;
+    width: 100%;
+    object-fit: cover;
+    /* object-position: center 62%; */
+    z-index: -1;
+    transition: transform 0.1s linear;
+}
+
+/* .imageHeader>img.scaleImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center 62%;
+    transition: transform 0.1s linear;
+}
+
+.videoHeader>.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.82);
+} */
+
 #particles-js {
     position: absolute;
     left: 0;
@@ -378,8 +404,8 @@ header {
     color: #fdfdfd;
     font-weight: 400;
     font-size: 28px;
-    margin-bottom: 26px;    
-    letter-spacing: -1px;    
+    margin-bottom: 26px;
+    letter-spacing: -1px;
 }
 
 .header-text .title {
