--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -457,6 +457,9 @@ header {
 05. About-Area
 ---------------------- */
 .about-image {
+    width: 300px;
+    height: 400px;
+    margin-left: auto;
     background-color: #f3f7ff;
     overflow: hidden;
     text-align: center;
