--- a/public/frontend/assets/css/theme.css
+++ b/public/frontend/assets/css/theme.css
@@ -379,7 +379,7 @@ header {
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: 0.55;
+    opacity: 0.35;
     z-index: -1;
 }
 
@@ -457,8 +457,8 @@ header {
 05. About-Area
 ---------------------- */
 .about-image {
-    width: 300px;
-    height: 400px;
+    width: 350px;
+    /* height: 400px; */
     margin-left: auto;
     background-color: #f3f7ff;
     overflow: hidden;
@@ -479,7 +479,7 @@ header {
 }
 
 .about-text .desc {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     letter-spacing: -1px;
     line-height: 2;
 }
